<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_location"
        android:icon="@drawable/ic_action_location"
        android:title="@string/location"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_follow"
        android:icon="@drawable/ic_action_follow"
        android:title="@string/follow"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_no_follow"
        android:icon="@drawable/ic_action_follow_active"
        android:title="@string/follow"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_gpx"
        android:icon="@drawable/ic_action_gpx"
        android:title="@string/gpx"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_gpx_details"
        android:icon="@drawable/ic_action_gpx_details"
        android:title="@string/gpx_details"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_gpx_zoom"
        android:icon="@drawable/ic_action_zoom_to"
        android:title="@string/gpx_zoom"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_kml"
        android:icon="@drawable/ic_action_kml"
        android:title="@string/kml"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_kml_zoom"
        android:icon="@drawable/ic_action_zoom_to"
        android:title="@string/kml_zoom"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_kml_remove"
        android:title="@string/kml_remove"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_gpx_remove"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/gpx_remove"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_layers"
        android:icon="@drawable/ic_action_layers"
        android:title="@string/layers"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_markers"
        android:icon="@drawable/ic_action_markers"
        android:title="@string/markers"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_location_details"
        android:icon="@drawable/ic_action_details"
        android:title="@string/location_details"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_nearby"
        android:icon="@drawable/ic_action_nearby"
        android:title="@string/nearby"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/about"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_privacy_settings"
        android:title="@string/privacy_settings"
        android:visible="false"
        app:showAsAction="never" />
</menu>